--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,8 @@ p {
     font-size: 16px;
 }
 
+/* aside background */
+
 .hero {
     height: 800px;
     width: 100%;
@@ -80,6 +82,8 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
+
+/* aside styling */
 
 .benefits {
     margin-right: 20px;
@@ -193,6 +197,8 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/* footer styling */
 
 .footer {
     padding: 30px;
